After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768838 - camerabinpreview: fix bus leak
camerabinpreview: fix bus leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-15 09:52 UTC by Guillaume Desmottes
Modified: 2016-07-16 11:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
camerabinpreview: fix bus leak (1.21 KB, patch)
2016-07-15 09:53 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-07-15 09:52:15 UTC
.
Comment 1 Guillaume Desmottes 2016-07-15 09:53:15 UTC
Created attachment 331561 [details] [review]
camerabinpreview: fix bus leak

We were never removing the watch introduced in
gst_camerabin_create_preview_pipeline() so its extra ref on the bus was
never released.
Comment 2 Thiago Sousa Santos 2016-07-16 02:40:00 UTC
commit d29ec01b8a63b8b9422fc05f88a30b0c3efbf423
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Fri Jul 15 11:48:25 2016 +0200

    camerabinpreview: fix bus leak
    
    We were never removing the watch introduced in
    gst_camerabin_create_preview_pipeline() so its extra ref on the bus was
    never released.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=768838